cmake_minimum_required(VERSION 3.10)
project(sysmgr)
aux_source_directory(. DIR_SRCS)
add_executable(sysmgr ${DIR_SRCS})
target_link_libraries(sysmgr gobject-2.0 cairo)
include_directories(${MINIGUI_INCLUDE_DIRS} ${MGEFF_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${LIBRSVG_INCLUDE_DIR} ${Cairo_INCLUDE_DIRS})
target_link_libraries(sysmgr ${MINIGUI_LIBRARIES} ${MGEFF_LIBRARIES} ${LIBRSVG_LIBRARIES} ${GLIB_LIBRARIES})
install(TARGETS sysmgr DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/)
install(FILES res/arrow.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
install(FILES res/home.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
install(FILES res/toggle.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
install(FILES res/setting.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
install(FILES res/shutdown.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
install(FILES res/about.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec/res/)
