SUBDIRS=res
noinst_PROGRAMS=cbplus

cbplus_SOURCES= \
    cbplus.cc \
    cbplus.h \
    bootup-res.cc \
    bootup-res.inc \
    bootup-res.h \
    sys-res.inc \
    sys-res.cc \
    sys-res.h \
    bootuplogo.cc \
    bootuplogo.h \
    bootupgreet.cc \
    bootupgreet.h \
    bootupactivity.cc \
    bootupactivity.h

EXTRA_DIST=
