SUBDIRS=res
noinst_PROGRAMS=hybridrun

hybridrun_SOURCES= \
    hybridrun.cc \
    hybridrun.h \
    bootup-res.cc \
    bootup-res.inc \
    bootup-res.h \
    sys-res.inc \
    sys-res.cc \
    sys-res.h \
    bootuplogo.cc \
    bootuplogo.h \
    bootupgreet.cc \
    bootupgreet.h \
    bootupactivity.cc \
    bootupactivity.h

EXTRA_DIST=
