AUTOMAKE_OPTIONS=subdir-objects
SUBDIRS=res
noinst_PROGRAMS=hybridrun

hybridrun_SOURCES= \
    hybridrun.cc \
    hybridrun.h \
    sys-res.inc \
    sys-res.cc \
    sys-res.h \
    activities/bootup/bootup-res.cc \
    activities/bootup/bootup-res.inc \
    activities/bootup/bootup-res.h \
    activities/bootup/bootuplogo.cc \
    activities/bootup/bootuplogo.h \
    activities/bootup/bootupgreet.cc \
    activities/bootup/bootupgreet.h \
    activities/bootup/bootupactivity.cc \
    activities/bootup/bootupactivity.h

EXTRA_DIST=
