SUBDIRS=res
noinst_PROGRAMS=helloworld

helloworld_SOURCES= \
    helloworld.cc \
    bootup-res.cc \
    bootup-res.inc \
    bootup-res.h \
    sys-res.inc \
    sys-res.cc \
    sys-res.h \
    bootuplogo.cc \
    bootuplogo.h \
    bootupgreet.cc \
    bootupgreet.h \
    bootupactivity.cc \
    bootupactivity.h

EXTRA_DIST=
