# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/activity

# Which header files to install
myinclude_HEADERS= \
    baseactivity.h \
    activity.h \
    activityfactory.h \
    activityinfo.h \
    activitymanager.h \
    activitystack.h \
    activitywithclients.h \
    controller.h \
    intent.h \
    window.h
