# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/animation

# Which header files to install
myinclude_HEADERS= \
    effector_defines.cpp.h \
    effector_defines.header.h \
    effector_undefines.h \
    animation.h \
    alphaviewanimation.h \
    groupanimation.h \
    moveviewanimation.h \
    scaleviewanimation.h \
    viewanimation.h
