# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/common

# Which header files to install
myinclude_HEADERS= \
    checkstltemplate.h \
    codeconvert.h \
    common.h \
    contextstream.h \
    datetime.h \
    file.h \
    hfclevent.h \
    imebase.h \
    imeinterface.h \
    intrect.h \
    list.h \
    log.h \
    Makefile.am \
    methodeventlistener.h \
    object.h \
    quicksort.h \
    rbtree.h \
    selectsort.h \
    urlparse.h \
    util.h
