# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/common

# Which header files to install
myinclude_HEADERS= \
    common.h \
    stlalternative.h \
    intrect.h \
    object.h \
    event.h \
    contextstream.h \
    imebase.h \
    imeinterface.h \
    list.h \
    log.h \
    methodeventlistener.h \
    helpers.h \
    quicksort.h \
    rbtree.h \
    selectsort.h
