# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/common

# Which header files to install
myinclude_HEADERS= \
    common.h \
    stlalternative.h \
    intrect.h \
    realrect.h \
    object.h \
    list.h \
    helpers.h \
    quicksort.h \
    rbtree.h \
    selectsort.h \
    log.h \
    contextstream.h \
    event.h \
    methodeventlistener.h \
    imebase.h \
    imeinterface.h
