# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/css

# Which header files to install
myinclude_HEADERS= \
    propertyvalue.h \
    stylesheet.h \
    stylesheetinitial.h \
    stylesheetdeclared.h \
    stylesheetset.h

EXTRA_DIST= \
    css_code_generator.py

