# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/css

# Which header files to install
myinclude_HEADERS= \
    csspropertyvalue.h \
    css.h \
    cssinitial.h \
    cssdeclared.h \
    csscomputed.h \
    cssdeclaredgroup.h

EXTRA_DIST= \
    css_code_generator.py

