# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/css

# Which header files to install
myinclude_HEADERS= \
    csspropertyvalue.inc \
    csspropertyvalue.h \
    css.h \
    cssinitial.h \
    cssdeclared.inc \
    cssdeclared.h \
    csscomputed.h \
    cssdeclaredgroup.h \
    cssselector.h

EXTRA_DIST= \
    css_code_generator.py

