# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/drawable

# Which header files to install
myinclude_HEADERS= \
    colordrawable.h \
    common-drawable-ids.h \
    drawable.h \
    drawable-id-def.h \
    drawable-id.h \
    drawable-id-namemap.h \
    imagedrawable.h \
    statecolordrawable.h \
    stateimagedrawable.h \
    statetextdrawable.h \
    textdrawable.h


