# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/mgcl

# Which header files to install
myinclude_HEADERS= \
    mgclactivity.h \
    mgclanimation.h \
    mgclcommon.h \
    mgclgraphics.h \
    mgcl.h \
    mgcllist.h \
    mgclservices.h \
    mgcltransparent.h
