# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/resource

# Which header files to install
myinclude_HEADERS= \
    restypes.h \
    drawableres.h \
    textres.h \
    fontres.h \
    imageres.h \
    themeres.h \
    resdefines.head.h \
    resdefines.init.h \
    resdefines.name.h \
    resdefines.source.h \
    resundefines.h \
    resloader.h \
    respackage.h \
    respkgmanager.h
