# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/view

# Which header files to install
myinclude_HEADERS= \
    animateimageview.h \
    arrowtextview.h \
    bitmark.h \
    boxlayoutview.h \
    busylistview.h \
    buttonview.h \
    compositeview.h \
    containerview.h \
    dynclistview.h \
    editview.h \
    formateditview.h \
    gifanimateview.h \
    gridview.h \
    iconitemview.h \
    iconview.h \
    imageview.h \
    itemview.h \
    layoutview.h \
    linelayoutview.h \
    listview.h \
    menubarview.h \
    mleditview.h \
    multifieldeditor.h \
    pagenavigateview.h \
    pageview.h \
    pairlayoutview.h \
    panelview.h \
    scrollview.h \
    selectediconitemview.h \
    simpleitemview.h \
    sleditview.h \
    slideswitcher.h \
    statusbarview.h \
    tablebarview.h \
    textview.h \
    timeeditor.h \
    titemview.h \
    trackbarview.h \
    transition.h \
    viewcontext.h \
    view.h \
    wrapperview.h
