# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl/view

# Which header files to install
myinclude_HEADERS= \
    viewfactory.h \
    view.h \
    viewcontainer.h \
    viewcontext.h \
    hvmlparser.h \
    scrollbar.h \
    transition.h \
    rootview.h \
    panelview.h \
    paragraphview.h \
    textview.h \
    atomictextview.h \
    staticimageview.h \
    animatedimageview.h

#    animateimageview.h \
#    arrowtextview.h \
#    bitmark.h \
#    boxlayoutview.h \
#    busylistview.h \
#    buttonview.h \
#    compositeview.h \
#    dynclistview.h \
#    editview.h \
#    formateditview.h \
#    gridview.h \
#    iconitemview.h \
#    iconview.h \
#    itemview.h \
#    layoutview.h \
#    linelayoutview.h \
#    listview.h \
#    menubarview.h \
#    mleditview.h \
#    multifieldeditor.h \
#    pagenavigateview.h \
#    pageview.h \
#    pairlayoutview.h \
#    selectediconitemview.h \
#    simpleitemview.h \
#    sleditview.h \
#    slideswitcher.h \
#    statusbarview.h \
#    tablebarview.h \
#    timeeditor.h \
#    titemview.h \
#    trackbarview.h \
#    wrapperview.h
