AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_activity.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_activity_la_SOURCES = \
    appinfo.cc \
    application.cc \
    appmanager.cc \
    appstack.cc \
    baseapp.cc \
    controller.cc \
    intent.cc \
    nguxwindow.cc

