AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_activity.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_activity_la_SOURCES = \
    activity.cc \
    activityinfo.cc \
    activitymanager.cc \
    appstack.cc \
    baseactivity.cc \
    controller.cc \
    intent.cc \
    window.cc
