AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_animation.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_animation_la_SOURCES = \
    animation.cc \
    alphaviewanimation.cc \
    groupanimation.cc \
    moveviewanimation.cc \
    scaleviewanimation.cc \
    viewanimation.cc
