AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_common.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_common_la_SOURCES = \
    codeconvert.cc \
    contextstream.cc \
    datetime.cc \
    file.cc \
    intrect.cc \
    log.cc \
    Makefile.am \
    methodeventlistener.cc \
    nguxevent.cc \
    nguxobject.cc \
    quicksort.cc \
    rbtree.cc \
    selectsort.cc
