AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_common.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_common_la_SOURCES = \
    intrect.cc \
    event.cc \
    object.cc \
    contextstream.cc \
    datetime.cc \
    log.cc \
    file.cc \
    methodeventlistener.cc \
    codeconvert.cc \
    rbtree.cc \
    quicksort.cc \
    selectsort.cc
