AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_common.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_common_la_SOURCES = \
    stlalternative.cc \
    intrect.cc \
    event.cc \
    object.cc \
    htmlparaparser.cc \
    contextstream.cc \
    log.cc \
    methodeventlistener.cc \
    helpers.cc \
    rbtree.cc \
    quicksort.cc \
    selectsort.cc
