AUTOMAKE_OPTIONS=subdir-objects

SUBDIRS=
noinst_LTLIBRARIES=libhfcl_drawable.la

AM_CPPFLAGS=-D__HFCL_LIB__ -I../../include
libhfcl_drawable_la_SOURCES = \
    drawable.cc \
    colordrawable.cc \
    textdrawable.cc \
    imagedrawable.cc \
    statecolordrawable.cc \
    stateimagedrawable.cc \
    statetextdrawable.cc
